<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="beaux.thomas.base.ViewActivity">
<<<<<<< HEAD
    <item
        android:id="@+id/action_settings"

        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
=======

>>>>>>> FrontEndUI
    <item
        android:id="@+id/menu_export"
        android:checkable="false"
        android:orderInCategory="100"
        android:title="@string/menu_export"
        app:showAsAction="never" />
<<<<<<< HEAD
=======
    <item
        android:id="@+id/menu_delete"
        android:checkable="false"
        android:orderInCategory="100"
        android:title="@string/delete_act"
        app:showAsAction="never" />
>>>>>>> FrontEndUI

</menu>
