<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="beaux.thomas.base.ActivityManagement"
    tools:showIn="@layout/activity_creation_view">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_style"
                        android:onClick="PickImage"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <LinearLayout
                        android:layout_width="152dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/ActivityName"
                            android:layout_width="221dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_style"
                            android:ems="10"
                            android:hint="@string/activity_name"
                            android:inputType="text|textPersonName"
                            android:textAlignment="center"
                            android:textSize="32sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/filepath"
                            android:layout_width="234dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_style">

                <EditText
                    android:id="@+id/StatName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_name"
                    android:inputType="text|textPersonName"
                    android:textSize="14sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/StatType"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

                <EditText
                    android:id="@+id/StatType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_type"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_style">

                <EditText
                    android:id="@+id/StatName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_name"
                    android:inputType="text|textPersonName"
                    android:textSize="14sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/StatType2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

                <EditText
                    android:id="@+id/StatType2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_type"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/StatName2"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_style">

                <EditText
                    android:id="@+id/StatName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_name"
                    android:inputType="text|textPersonName"
                    android:textSize="14sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/StatType3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

                <EditText
                    android:id="@+id/StatType3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_type"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/StatName3"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_style">

                <EditText
                    android:id="@+id/StatName4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_name"
                    android:inputType="text|textPersonName"
                    android:textSize="14sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/StatType4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

                <EditText
                    android:id="@+id/StatType4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_type"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/StatName4"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_style">

                <EditText
                    android:id="@+id/StatName5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_name"
                    android:inputType="text|textPersonName"
                    android:textSize="14sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/StatType5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

                <EditText
                    android:id="@+id/StatType5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/stat_type"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/StatName5"
                    app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="158dp"
                tools:layout_editor_absoluteY="111dp">

                <EditText
                    android:id="@+id/des"
                    android:layout_width="156dp"
                    android:layout_height="67dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_style"
                    android:ems="10"
                    android:hint="Description"
                    android:inputType="text"
                    android:selectAllOnFocus="false"
                    android:singleLine="false"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="226dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="8dp"
                            android:layout_marginStart="104dp"
                            android:layout_weight="1"
                            android:onClick="addMorestat"
                            android:text="More"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:layout_editor_absoluteX="8dp" />

                        <CheckBox
                            android:id="@+id/timer"
                            android:layout_width="180dp"
                            android:layout_height="0dp"
                            android:layout_marginBottom="0dp"
                            android:layout_marginEnd="0dp"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_style"

                            android:text="Timer" />

                        <CheckBox
                            android:id="@+id/Distance"
                            android:layout_width="179dp"
                            android:layout_height="0dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_style"

                            android:text="GPS" />

                        <Button
                            android:id="@+id/Create"
                            android:layout_width="100dp"
                            android:layout_height="6dp"
                            android:layout_marginBottom="16dp"
                            android:layout_marginRight="0dp"
                            android:layout_marginStart="104dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_style"
                            android:onClick="GatherStatInfo"
                            android:text="@string/send_stat"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />
                    </LinearLayout>

                </LinearLayout>

            </TableRow>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
